// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;

// ServiceFunctionChain is used to store definition of a service function chain as a k8s CRD resource.
message ServiceFunctionChain {

    // Name of the chain.
    string name = 1;

    // Name of the custom pod network where the chain resides
    // (if applicable, can be left blank for the default pod network).
    string network = 2;

    message ServiceFunction {
        enum Type {
            Pod = 0;
            ExternalInterface = 1;
        }
        // Name of the service function (optional).
        string name = 1;

        // Type of the service function.
        Type type = 2;

        // Pod selector (k8s labels) identifying the pod(s)
        // (applicable for pod service function type).
        map<string, string> pod_selector = 3;

        // Interface trough which the traffic enters the service function. Applicable for:
        // - pods with multiple interfaces
        // - external interface if it is the last element (service function) in the chain
        string input_interface = 4;

        // Interface trough which the traffic leaves the service function. Applicable for:
        // - pods with multiple interfaces
        // - external interface if it is the first element (service function) in the chain
        string output_interface = 5;
    }

    // List of service functions (chain elements) in the chain.
    repeated ServiceFunction chain = 3;
}
